--- a/TeklifSite/Views/Products/Index.cshtml
+++ b/TeklifSite/Views/Products/Index.cshtml
@@ -48,12 +48,13 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ProductPicture)
+                <img src="~/Urunler/@item.ProductPicture" height="100" width="100"/>
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ProductPrice)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Category.CategoryId)
+                @Html.DisplayFor(modelItem => item.Category.CategoryName)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ProductId">Edit</a> |
