--- a/TeklifSite/Views/Sliders/Create.cshtml
+++ b/TeklifSite/Views/Sliders/Create.cshtml
@@ -11,7 +11,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="SliderName" class="control-label"></label>
@@ -35,7 +35,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="SliderImage" class="control-label"></label>
-                <input asp-for="SliderImage" class="form-control" />
+                <input asp-for="ImageUpload" type="file" class="form-control" />
                 <span asp-validation-for="SliderImage" class="text-danger"></span>
             </div>
             <div class="form-group">
